tests/ui/dropck/explicit-implied-outlives.bad1.stderr
error[E0367]: `Drop` impl requires `T: 'static` but the struct it is implemented for does not
  --> $DIR/explicit-implied-outlives.rs:28:8
   |
LL |     T: 'static,
   |        ^^^^^^^
   |
note: the implementor must specify the same requirement
  --> $DIR/explicit-implied-outlives.rs:7:1
   |
LL | struct DropMe<'a, T>(&'a T);
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0367`.
